# pebble-rust-2026

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  wrapper.h
.cargo/: config.toml
headers/: entry.h
proc/: Cargo.toml
proc/src/: lib.rs
src/: README.md  action_bar_layer.rs  action_menu.rs  align.rs  angle.rs  app.rs  app_cores.rs  app_message_result.rs  bitmap.rs  bitmap_layer.rs  color.rs  content_indicator.rs  context.rs  custom_alloc.rs  dictionary.rs  effect.rs  fmt.rs  font.rs  globals.rs  handle.rs  heap.rs  key.rs  layer.rs  lib.rs  log.rs  mutex.rs  node.rs  non_send.rs  persist.rs  point.rs  raw_timer.rs  rect.rs  safety.md  scroll_layer.rs  simple_menu_layer.rs  size.rs  status_bar_layer.rs  status_code.rs  sys.rs  test_render.rs  (+5 more)
src/input/: button.rs  click.rs  context.rs  handlers.rs  mod.rs
src/service/: accel.rs  app_focus.rs  battery.rs  bluetooth.rs  compass.rs  global_callback.rs  mod.rs  touch.rs  unobstructed_area.rs  wakeup.rs
src/window/: handle.rs  inner.rs  mod.rs  raw.rs
tools/: group-test.py  group.py  progress.sh
