[package]
name = "pebble-rust-2026"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
critical-section = "1.2.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
panic = "abort"
debug = true
opt-level = 2   # or "s" for size


[profile.dev]
panic = "abort"
test = false
