[package]
name = "pebble_rust_2026"
version = "0.1.0"
edition = "2024"

[lib]
test = false
doctest = false
bench = false

[dependencies]
proc = { path = "./proc/" }

[build-dependencies]
bindgen = "0.72.1"

[profile.release]
panic = "abort"
debug = true
opt-level = 2


[profile.dev]
panic = "abort"
test = false
